# short-video-ai-generator-public

./: .gitignore  CLAUDE.md  E2E_TESTING_GUIDE.md  LICENSE  README.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README_CREDENTIALS.md  README_GCS_SETUP.md  deploy.sh  gcs-cors.json  main.py  pyproject.toml  requirements.txt  setup-gcs-cors.sh
backend/app/core/: settings.py
backend/app/models/: schemas.py
backend/app/services/: analyze.py  analyze_google_ai.py  extract.py  gcs_utils.py  upload.py
backend/tests/: __init__.py  conftest.py  test_api_upload.py  test_health.py  test_settings.py  test_upload.py  test_upload_env.py
docs/: ENVIRONMENT_VARIABLES.md
frontend/: .env.example  Dockerfile  next.config.ts  package-lock.json  package.json  vitest.config.mts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/analyze/[fileId]/: route.ts
frontend/src/app/api/extract/: route.ts
frontend/src/app/api/models/: route.ts
frontend/src/app/api/upload/init/: route.ts
frontend/src/components/: ModelSelector.tsx  error-boundary.tsx
frontend/src/components/analysis/: AnalysisButton.tsx  HighlightSelector.tsx
frontend/src/components/test/: FileIdBypass.tsx
frontend/src/components/ui/: loading.tsx  select.tsx
frontend/src/components/video/: VideoPlayer.tsx  VideoTimeline.tsx  VideoUploader.tsx
frontend/src/hooks/: useModels.ts
frontend/src/lib/: error-handler.ts  validation.ts
frontend/src/lib/api/: client.ts  interfaces.ts  server-auth.ts
frontend/src/lib/utils/: time.ts  video.ts
frontend/src/stores/: videoStore.ts
frontend/src/types/: global.d.ts  models.ts
frontend/tests/: README.md
frontend/tests/cases/: video-upload-with-mock.spec.ts  video-upload.spec.ts
frontend/tests/mocks/: api-mock-factory.ts
frontend/tests/pages/: index.page.ts
frontend/tests/steps/: index.step.ts
frontend/tests/unit/: README.md  setup.ts
frontend/tests/unit/utils/: time.test.ts  video.test.ts
spec/: 10_video_timeline.md  13_remove_mock_storage.md  15_upload_video_loading_spinner.md  16_refine_download.md  18_reset_analysis.md  19_adjust_analyzed_timing.md  1_separate-monorepo.md  24_regenerate_analysys.md  26_add_mermaid_flow.md  27_add_env_docs.md  29_error_handle.md  2_setup-shadcn.md  31_validate_with_zod.md  33_google_auth_request.md  3_implement-frontend.md  4_fix_xhr.md  5_add_playwright.md  6_playwright_api_mock.md  8_python_backend_upload.md  9_api_routes.md
spec/backend/: 11_ffmpeg.md  12_presigned_url.md  14_gemini_analyze.md  21_refactor_presigned_url.md  22_google_ai_api.md  23_logging.md  23_model_selection.md  25_format_with_ruff.md  30_add_tests.md  32_refine_env_pydantic_settings.md
spec/test/: 17_add_playwright_tests.md  20_vitest.md
